examples/test/testpolicy11414.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11414
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key39: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value16
          key17: value8
          key2: value27
      podSelector:
        matchLabels:
          key48: value7
          key16: value29
          key20: value41
